Fixed mobile spacing issue and homepage spacing issue.

--- a/missingkids/less/custom-css.less
+++ b/missingkids/less/custom-css.less
@@ -74,6 +74,11 @@ hr {
         padding: 7px 8px;
     }
 
+    .main-content-area {
+        padding-left: 0;
+        padding-right: 0;
+    }    
+
     .sponsored-links {
         li {
             margin-bottom: 16px;
